# libsdp

./: CMakeLists.txt  atom.mk
include/: libsdp.h
src/: sdp.c  sdp.h  sdp_base64.c  sdp_log.c  sdp_log.h
test/: sdp_test.c
tests/: sdp_test.c
